@@ -6,6 +6,7 @@ call %TOPDIR%\bin\sparkling-env.cmd
 rem Verify there is Spark installation
 call %LIBSW% checkSparkHome
 call %LIBSW% checkSparkVersion
+call %LIBSW% checkFatJarExists
 
 rem Example prefix
 set PREFIX=org.apache.spark.examples.h2o
@@ -57,41 +58,16 @@ echo ---------
 
 set SPARK_PRINT_LAUNCH_COMMAND=1
 set VERBOSE=--verbose
-if "%EXAMPLE_MASTER%" == "yarn-client" (
-   goto :withoutdeploymode
-) else (
-if "%EXAMPLE_MASTER%" == "yarn-cluster" (
-   goto :withoutdeploymode
-) else (
-   goto :withdeploymode
-)
-)
-:withoutdeploymode
-cd %TOPDIR%
-call %SPARK_HOME%/bin/spark-submit2.cmd ^
- --class %EXAMPLE% ^
- --master %EXAMPLE_MASTER% ^
- --driver-memory %EXAMPLE_DRIVER_MEMORY% ^
- --driver-java-options "%EXAMPLE_H2O_SYS_OPS%" ^
- --conf spark.driver.extraJavaOptions="-XX:MaxPermSize=384m" ^
- %VERBOSE% ^
- %TOPDIR%/assembly/build/libs/%FAT_JAR% ^
- %*
-exit /b %ERRORLEVEL%
 
-:withdeploymode
-cd %TOPDIR%
 call %SPARK_HOME%/bin/spark-submit2.cmd ^
  --class %EXAMPLE% ^
  --master %EXAMPLE_MASTER% ^
  --driver-memory %EXAMPLE_DRIVER_MEMORY% ^
  --driver-java-options "%EXAMPLE_H2O_SYS_OPS%" ^
  --deploy-mode %EXAMPLE_DEPLOY_MODE% ^
- --conf spark.driver.extraJavaOptions="-XX:MaxPermSize=384m" ^
  %VERBOSE% ^
- %TOPDIR%/assembly/build/libs/%FAT_JAR% ^
+ %FAT_JAR_FILE% ^
  %*
 exit /b %ERRORLEVEL%
-
 rem end of main script
 
